--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+2<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,7 +6,28 @@
     <title>Document</title>
 </head>
 <body>
-<h1>JS in Lemon.school</h1>
+
+<form action="index.php">
+
+    <input type="button" id="hider" value="Нажмите, чтобы спрятать текст" />
+
+    <div id="text">Текст</div>
+  
+    <script>
+        
+        document.getElementById('hider').onclick = function() {
+            let date = new Date('March 23, 2020');
+            let year = date.getDate();
+            alert(year);
+        }
+      </script>
+
+<ul>
+    <li>First</li>>
+    <li>Second</li>>
+    <li>Third</li>>
+    <li>Forth</li>>
+</ul>
 <div class="block">
     <span>Кнопка</span>
    <div class="ico"></div>
