--- a/index.html
+++ b/index.html
@@ -4,77 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .selected {
-          background: rgb(106, 42, 207);
-        }
-        li {
-          cursor: pointer;
-        }
-      </style>
 </head>
 
 <body>
 
-
 <h1 id="hide">JS in Lemon.School</h1>
-
-<input type="submit", id = "click", value="Нажми, и H1 исчезнет"></input>
-
-<input type="button" onclick="this.hidden=true" value="Нажми, и я спрячусь"></input>
-
-<ul>
-    <li>Arnold</li>
-    <li>Bengamin</li>
-    <li>Carlos</li>
-    <li>Daniel</li>
-    <li>Eric</li>
-    <li>Arnold</li>
-    <li>Bengamin</li>
-    <li>Carlos</li>
-    <li>Daniel</li>
-    <li>Eric</li>
-    <li>Arnold</li>
-    <li>Bengamin</li>
-    <li>Carlos</li>
-    <li>Daniel</li>
-    <li>Eric</li>
-    <li>Arnold</li>
-    <li>Bengamin</li>
-    <li>Carlos</li>
-    <li>Daniel</li>
-    <li>Eric</li>
-    <li>Arnold</li>
-    <li>Bengamin</li>
-    <li>Carlos</li>
-    <li>Daniel</li>
-    <li>Eric</li>
-    <li>Arnold</li>
-    <li>Bengamin</li>
-    <li>Carlos</li>
-    <li>Daniel</li>
-    <li>Eric</li>
-    <li>Arnold</li>
-    <li>Bengamin</li>
-    <li>Carlos</li>
-    <li>Daniel</li>
-    <li>Eric</li>
-    <li>Arnold</li>
-    <li>Bengamin</li>
-    <li>Carlos</li>
-    <li>Daniel</li>
-    <li>Eric</li>
-    <li>Arnold</li>
-    <li>Bengamin</li>
-    <li>Carlos</li>
-    <li>Daniel</li>
-    <li>Eric</li>
-    </ul>  
-
-    <div id=mydiv style="position: absolute">Element</div>
+<link rel="stylesheet" type="text/css" href="stylecss.css">
+<div id="todos_list", class="todos"></div> 
+<ol></ol>
+<a href="#" id="MoreButton" class="button7">Еще 10</a>
+<ul></ul>
 
 </body>
-
+<script>src='https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.9.1/underscore-min.js'</script>
 <script
 src="https://code.jquery.com/jquery-3.4.1.min.js"
 integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
@@ -83,5 +25,7 @@ crossorigin="anonymous"></script>
 integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
 crossorigin="anonymous"
 </script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 <script src="main.js"></script>
 </html>
